--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,10 @@ encoding: utf-8
 # Site settings
 title: Your awesome title
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+description: > Comet lets you build online
+baseurl: "/home" # the subpath of your site, e.g. /blog
+url: "http://get-comet.com" # the base hostname & protocol for your site
+github_username:  mosesag0813
 
 # Build settings
 markdown: kramdown
