--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: Comet
 email: mosesag0813@comet.com
 description: > Comet lets you build online
 baseurl: "/home" # the subpath of your site, e.g. /blog
-url: "http://get-comet.com" # the base hostname & protocol for your site
+url: "http://comet.io" # the base hostname & protocol for your site
 github_username:  mosesag0813
 
 # Build settings
