--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ encoding: utf-8
 # Site settings
 title: Comet
 email: mosesag0813@comet.com
-description: > Comet lets you build online
+description: > Comet lets you build online.
 baseurl: "/home" # the subpath of your site, e.g. /blog
 url: "http://comet.io" # the base hostname & protocol for your site
 github_username:  mosesag0813
