--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,10 @@ encoding: utf-8
 # Site settings
 title: Comet
 email: mosesag0813@comet.com
-description: > Comet lets you build online.
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "/home" # the subpath of your site, e.g. /blog
 url: "http://comet.io" # the base hostname & protocol for your site
 github_username:  mosesag0813
