--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # this means to ignore newlines until "baseurl:"
    line in _config.yml. It will appear in your document head meta (for
    Google search results) and in your feed.xml site description.
 baseurl: "/home" # the subpath of your site, e.g. /blog
-url: "http://comet.io" # the base hostname & protocol for your site
+url: "http://mosesag0813.github.io" # the base hostname & protocol for your site
 github_username: mosesag0813
 
 # Build settings
